ephy-history-service: do not open a transaction in read-only mode

https://bugzilla.gnome.org/show_bug.cgi?id=735912